# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $
  18 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-controller.sh:
  Working around an issue in baselayout-2.0.0.ebuild that fries /usr/lib/gcc
  in its pkg_preinst script if it is merged after gcc. This should be
  considered a temporary fix. To debug this issue, I added a basic
  /etc/portage/bashrc "probes" capability to stage1-chroot.sh which is now
  commented out but kept for future reference as the code itself is useful
  when you hit a thorny build problem.

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  forgot:
  stage1 now has ccache enabled. Will see if this breaks anything. If not,
  then yay.

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  many files:
  totally removed AUTORESUME and digest support. This is beta and there are
  likely still digest issues/bugs in the code that I haven't hit yet. Once it
  is all removed, we should have jettisoned about 200 or so lines of code?
  Makes it a lot simpler. Want to have an external program do digests rather
  than have it so integrated.

  15 Aug 2008; Daniel Robbins <drobbins@funtoo.org>
  modules/generic_stage_target.py,
  modules/snapshot_target.py,
  catalyst:
  Now we support "portdir" and "portname" settings, and "portdir" can now
  point to a git repo. "portname" allows you to use a name other than
  "portage" in your portage snapshot tarball so you can have an experimental
  tree called "funtoo" or "gleep" for example, and generate
  "gleep-2008.08.15.tar.bz2" snapshots in the snapshots/ directory. Yay!

  25 Mar 2008; Daniel Robbins <drobbins@funtoo.org>
  arch/x86.py,
  arch/amd64.py:
  Added core32 and core64 subarchitectures - synced with upstream as much
  as possible while preserving funtoo "core32" and "core64" extensions.

  10 Jan 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is now 2.0.5 for release.
